=head1 NAME

Changes - Apache mod_perl change logfile

=head1 CHANGES

all changes without author attribution are by Doug MacEachern

=over 3

=item 1.21_01-dev

add virtualhost support to Apache::RegistryLoader
[John Hughes <john@Calva.COM>]

$Apache::Registry::NameWithVirtualHost fix
[John Hughes <john@Calva.COM>]

allow Apache::PerlRun::handler to be subclassed
[Yasushi Nakajima <sey@jkc.co.jp>]

fix $r->connection->remote_ip for SGI performance patches (#ifdef SGI_BOOST)
[Artem Veremey <scimitar@mail.ru>]

mod_perl.exp is now installed

aix tweaks for building with apxs
[Jens-Uwe Mager <jum@helios.de>]

pod fixups to avoid WARNING from newer pod2*

Apache::RedirectLogFix now uses $r->last
[David D. Kilzer <ddkilzer@e-markets.com>]

tweaks for sfio
[Lupe Christoph <lupe@lupe-christoph.de>]

update Apache::SIG docs, thanks to Bill Moseley for the spot

fix get_set_PVp in mod_perl_xs.h
[Michal Jaegermann <michal@ellpspace.math.ualberta.ca>]

tweaks to compile/run with 5.5.670 + -Dusethreads

$r->hostname now documented [Eric Cholet <cholet@logilune.com>]

Apache::File methods are now documented 
[Eric Cholet <cholet@logilune.com>]

avoid quoting <Perl> config if args_how == RAW_ARGS
thanks to Michael Schout for the spot

PerlPassEnv maintains its value beyond the first request,
thanks to Chris Thorman for the spot

prevent possible core dump in $r->pnotes if get_module_config returns
NULL, thanks to Kevin Murphy for the spot

fix Apache::Status::status_cv_dump for Perl/5.6-dev

use perl_get_sv("]") instead of patchlevel for $AddPerlVersion

adjust Makefile.PL and Apache::src to parse 1.3.13-dev's httpd.h

Apache::Util functions $r->unescape_uri, $r->unescape_uri_info,
$r->size_string are now documented [Eric Cholet <cholet@logilune.com>]

$r->request_time is now documented [Jeffrey W. Baker <jwbaker@acm.org>]

Look for the makepl_args.mod_perl file as .makepl_args.mod_perl in
./ and ../ too since the book says it works so. [Ask Bjoern Hansen
<ask@valueclick.com>]
