@@ -10,6 +10,9 @@ all changes without author attribution are by Doug MacEachern
 
 =item 1.21_01-dev
 
+fix Apache::Registry when $r->uri ends with a /
+[Peter Deister <deister@opus5.de>]
+
 add virtualhost support to Apache::RegistryLoader
 [John Hughes <john@Calva.COM>]
 
